# PQM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
notebooks/: mnist.ipynb  test.ipynb  time_series.ipynb
src/pqm/: __init__.py  pqm.py  pqm_core.py  test_gaussian.py  utils.py
tests/: test_consistency.py  test_errors.py  test_gaussian.py  test_permute.py  test_pqm.py  test_utils.py
